; ModuleID = '/home/carl/AnghaBench/Quake-III-Arena/code/botlib/extr_be_aas_route.c_AAS_ReadCache.c'
source_filename = "/home/carl/AnghaBench/Quake-III-Arena/code/botlib/extr_be_aas_route.c_AAS_ReadCache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.TYPE_5__ = type { i32 (i8*, i32, i32)* }
%struct.TYPE_4__ = type { i32, i8* }

@botimport = common dso_local global %struct.TYPE_5__ zeroinitializer, align 8

; Function Attrs: noinline nounwind optnone uwtable
define dso_local %struct.TYPE_4__* @AAS_ReadCache(i32 %0) #0 {
  %2 = alloca i32, align 4
  %3 = alloca i32, align 4
  %4 = alloca %struct.TYPE_4__*, align 8
  store i32 %0, i32* %2, align 4
  %5 = load i32 (i8*, i32, i32)*, i32 (i8*, i32, i32)** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @botimport, i32 0, i32 0), align 8
  %6 = bitcast i32* %3 to i8*
  %7 = load i32, i32* %2, align 4
  %8 = call i32 %5(i8* %6, i32 4, i32 %7)
  %9 = load i32, i32* %3, align 4
  %10 = call i64 @GetMemory(i32 %9)
  %11 = inttoptr i64 %10 to %struct.TYPE_4__*
  store %struct.TYPE_4__* %11, %struct.TYPE_4__** %4, align 8
  %12 = load i32, i32* %3, align 4
  %13 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %14 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %13, i32 0, i32 0
  store i32 %12, i32* %14, align 8
  %15 = load i32 (i8*, i32, i32)*, i32 (i8*, i32, i32)** getelementptr inbounds (%struct.TYPE_5__, %struct.TYPE_5__* @botimport, i32 0, i32 0), align 8
  %16 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %17 = bitcast %struct.TYPE_4__* %16 to i8*
  %18 = getelementptr inbounds i8, i8* %17, i64 4
  %19 = load i32, i32* %3, align 4
  %20 = sext i32 %19 to i64
  %21 = sub i64 %20, 4
  %22 = trunc i64 %21 to i32
  %23 = load i32, i32* %2, align 4
  %24 = call i32 %15(i8* %18, i32 %22, i32 %23)
  %25 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %26 = bitcast %struct.TYPE_4__* %25 to i8*
  %27 = getelementptr inbounds i8, i8* %26, i64 16
  %28 = getelementptr inbounds i8, i8* %27, i64 -2
  %29 = load i32, i32* %3, align 4
  %30 = sext i32 %29 to i64
  %31 = sub i64 %30, 16
  %32 = add i64 %31, 2
  %33 = udiv i64 %32, 3
  %34 = mul i64 %33, 2
  %35 = getelementptr inbounds i8, i8* %28, i64 %34
  %36 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  %37 = getelementptr inbounds %struct.TYPE_4__, %struct.TYPE_4__* %36, i32 0, i32 1
  store i8* %35, i8** %37, align 8
  %38 = load %struct.TYPE_4__*, %struct.TYPE_4__** %4, align 8
  ret %struct.TYPE_4__* %38
}

declare dso_local i64 @GetMemory(i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
